[package]
name = "blackbird"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
imap = "2.3.0"
native-tls = "0.2"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.10" }
clap = { version = "3.0", features = ["derive"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
